# Renderide

./: .gitignore  Cargo.toml  README.md  configuration.ini
crates/bootstrapper/: Cargo.toml  build.rs
crates/bootstrapper/src/: child_lifetime.rs  cleanup.rs  cli.rs  config.rs  constants.rs  error.rs  host.rs  host_spawner.rs  ipc.rs  lib.rs  main.rs  orchestration.rs  orphan.rs  panic_hook.rs  paths.rs  protocol.rs  protocol_handlers.rs  queue_verify.rs  renderer_link.rs  resoboot.rs  runtime.rs  vr_prompt.rs  wine_detect.rs
crates/bootstrapper/src/child_lifetime/: linux.rs  macos.rs  other.rs  windows.rs
crates/bootstrapper/src/paths/: dotnet.rs  mod.rs  resonite.rs  steam.rs
crates/bootstrapper/tests/: ipc_queues_tempdir.rs
crates/interprocess/: Cargo.toml
crates/interprocess/src/: backend.rs  circular_buffer.rs  error.rs  layout.rs  lib.rs  naming.rs  options.rs  publisher.rs  queue.rs  queue_resources.rs  ring.rs  sem.rs  semaphore.rs  subscriber.rs
crates/interprocess/src/memory/: mod.rs  unix.rs  windows.rs
crates/interprocess/src/semaphore/: mod.rs  posix.rs  win.rs
crates/interprocess/tests/: end_to_end.rs
crates/renderide/: Cargo.toml  build.rs  openxr_windows_arch.rs
crates/renderide/RENDERIDESHADERS/overlay/: overlay_stencil.wgsl
crates/renderide/RENDERIDESHADERS/pbr/: pbs_metallic_host_albedo.wgsl  pbs_metallic_mrt.wgsl  pbs_metallic_skinned.wgsl  pbs_metallic_skinned_mrt.wgsl
crates/renderide/RENDERIDESHADERS/skinned/: skinned.wgsl
crates/renderide/RENDERIDESHADERS/ui/: ui_text_unlit.wgsl  ui_unlit.wgsl
crates/renderide/RENDERIDESHADERS/world/: unlit.wgsl  xstoon2.wgsl
crates/renderide/build_support/: mod.rs  openxr_loader.rs  shader.rs  xr_assets.rs
crates/renderide/build_support/shader/: directives.rs  modules.rs
crates/renderide/shaders/: LICENSE  debug_world_normals_multiview.wgsl
crates/renderide/shaders/materials/: billboardunlit.wgsl  blur.wgsl  cadshader.wgsl  channelmatrix.wgsl  circle.wgsl  cubemapprojection.wgsl  depthprojection.wgsl  faceexplodeshader.wgsl  fresnel.wgsl  fresnellerp.wgsl  gamma.wgsl  getdepth.wgsl  getdepth_perobject.wgsl  gradientskybox.wgsl  grayscale.wgsl  hsv.wgsl  invert.wgsl  invisible.wgsl  lut.wgsl  lut_perobject.wgsl  matcap.wgsl  newunlitshader.wgsl  nosamplers.wgsl  null.wgsl  overlay.wgsl  overlayfresnel.wgsl  overlayunlit.wgsl  paintpbs.wgsl  pbscolormask.wgsl  pbscolormaskspecular.wgsl  pbscolorsplat.wgsl  pbscolorsplatspecular.wgsl  pbsdisplace.wgsl  pbsdisplaceshadow.wgsl  pbsdisplacespecular.wgsl  pbsdisplacespeculartransparent.wgsl  pbsdisplacetransparent.wgsl  pbsdistancelerp.wgsl  pbsdistancelerpspecular.wgsl  pbsdistancelerpspeculartransparent.wgsl  (+56 more)
crates/renderide/shaders/modules/: filter_math.wgsl  filter_vertex.wgsl  fullscreen.wgsl  ggx_prefilter.wgsl  globals.wgsl  gtao_filter.wgsl  math.wgsl  pbs_brdf.wgsl  pbs_normal.wgsl  skybox_evaluator.wgsl  text_sdf.wgsl  toon_brdf.wgsl  view_basis.wgsl  voronoi.wgsl  xiexe_toon2_base.wgsl  xiexe_toon2_lighting.wgsl  xiexe_toon2_surface.wgsl
crates/renderide/src/: app.rs  assets.rs  backend.rs  config.rs  diagnostics.rs  frontend.rs  gpu.rs  gpu_pools.rs  ipc.rs  lib.rs  main.rs  materials.rs  mesh_deform.rs  native_stdio.rs  occlusion.rs  output_device.rs  passes.rs  pipelines.rs  profiling.rs  reflection_probes.rs  render_graph.rs  resources.rs  run_error.rs  runtime.rs  scene.rs  shared.rs  skybox.rs  world_mesh.rs  xr.rs
crates/renderide/src/app/: frame_loop.rs  frame_pacing.rs  headless.rs  renderide_app.rs  startup.rs  window_icon.rs
crates/renderide/src/assets/: asset_transfer_queue.rs  host_shader_router.rs  manager.rs  material.rs  material_properties.rs  material_property_host.rs  mesh.rs  mod.rs  registry.rs  shader.rs  shader_program.rs  shader_unity_asset.rs  texture.rs  ui_material_contract.rs  util.rs  video.rs  world_unlit_material_contract.rs
crates/renderide/src/backend/: cluster_gpu.rs  coordinator.rs  debug_hud_bundle.rs  embedded_material_bind.rs  facade.rs  frame_gpu.rs  frame_gpu_bindings.rs  frame_resource_manager.rs  gpu_attached.rs  history_registry.rs  light_gpu.rs  manifest_material_bind.rs  material_property_reader.rs  material_system.rs  mesh_deform.rs  mod.rs  occlusion.rs  per_draw_resources.rs  reflection_probe_sh2.rs  render_backend.rs  skybox_environment.rs  skybox_params.rs  skybox_specular.rs
crates/renderide/src/config/: handle.rs  labeled_enum.rs  load.rs  mod.rs  persist.rs  reload.rs  resolve.rs  save.rs  settings.rs  types.rs  value.rs
crates/renderide/src/diagnostics/: debug_hud.rs  frame_diagnostics_snapshot.rs  frame_timing_hud_snapshot.rs  hud.rs  hud_input.rs  live_frame.rs  mod.rs  renderer_info_snapshot.rs  scene_transforms_snapshot.rs  texture_debug_snapshot.rs
crates/renderide/src/frontend/: begin_frame.rs  decoupling.rs  dispatch.rs  frame_start_performance.rs  input.rs  lockstep_state.rs  output_policy.rs  renderer_frontend.rs  session.rs  transport.rs
crates/renderide/src/gpu/: accel.rs  bind_layout.rs  context.rs  depth.rs  frame_cpu_gpu_timing.rs  frame_globals.rs  frame_scheduler.rs  hi_z.rs  hi_z_build.rs  instance_limits.rs  limits.rs  material_gpu_resources.rs  mesh.rs  mod.rs  msaa_depth_resolve.rs  native_ui_bind_cache.rs  output_depth_mode.rs  per_draw_uniforms.rs  pipeline.rs  pipeline_descriptor_cache.rs  present.rs  registry.rs  rtao_textures.rs  shader_key.rs  state.rs  vr_mirror.rs  vr_mirror_blit.rs
crates/renderide/src/gpu_pools/: budget.rs  pools.rs  resource_pool.rs  sampler_state.rs  texture_allocation.rs
crates/renderide/src/ipc/: connection.rs  dual_queue.rs  headless_config.rs  mod.rs  receiver.rs  shared_memory.rs
crates/renderide/src/logging/: mod.rs
crates/renderide/src/materials/: builtin_solid.rs  cache.rs  embedded.rs  embedded_raster_pipeline.rs  embedded_shader_stem.rs  family.rs  hi_z_material.rs  mod.rs  (+20 more)
crates/renderide/tests/: config_loading.rs  error_terminal_mirror_unix.rs  frontend_standalone.rs  instancing_batches.rs  material_uv_flip_audit.rs  native_stdio_forwarding.rs  render_graph_compile.rs  shader_module_audit.rs
(+1067 files in other folders)
