# Root Cargo.toml (Workspace Level)
[workspace]
resolver = "2"
members = [
  "crates/renderide",
  "crates/renderide-shared",
  "crates/renderide-test",
  "crates/interprocess",
  "crates/bootstrapper",
  "crates/logger",
]

# Faster-than-default dev builds: inherits `dev` (debug symbols, unwind, assertions) but uses opt 2.
# (`debug` is a reserved profile name in Cargo, so this is named `dev-fast`.)
# Usage: `cargo build --profile dev-fast`
[profile.dev-fast]
inherits = "dev"
opt-level = 2

# Global Release Build Settings
[profile.release]
# Disable debug symbols to reduce file size and increase performance
debug = false
# Full optimization for maximum performance
opt-level = 3
# Enable Link-Time Optimization (LTO) for smaller and faster binaries
lto = true
# Disable debug assertions for better performance
debug-assertions = false
# Set a lower panic strategy to reduce binary size (Unwind uses more space)
panic = "abort"

[workspace.lints.rust]
missing_docs = "warn"
unused_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Tier 1 — bug-catchers
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "warn"

# Tier 2 — discipline
allow_attributes = "warn"

# Tier 3 — mechanical cleanup
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
manual_assert = "warn"
if_not_else = "warn"
match_wildcard_for_single_variants = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
flat_map_option = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"

# Tier 4 — resource-management
rc_buffer = "warn"
unused_result_ok = "warn"
large_types_passed_by_value = "warn"
too_many_lines = "warn"
fn_params_excessive_bools = "warn"
debug_assert_with_mut_call = "warn"

# Tier 5 — additional bug-catchers (from audit)
iter_over_hash_type = "warn"
unused_self = "warn"
redundant_clone = "warn"
significant_drop_tightening = "warn"
as_ptr_cast_mut = "warn"
non_send_fields_in_send_ty = "warn"
as_underscore = "warn"

# Tier 6 — zero-cost sentinels (0 hits today; protect against future regressions)
path_buf_push_overwrite = "warn"
maybe_infinite_iter = "warn"
same_functions_in_if_condition = "warn"
invalid_upcast_comparisons = "warn"
mismatching_type_param_order = "warn"
transmute_ptr_to_ptr = "warn"
rc_mutex = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
large_stack_arrays = "warn"
lossy_float_literal = "warn"
