[package]
name = "interprocess"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_SystemServices"] }
